--- a/jaimewebdev.com/sass/_about.scss
+++ b/jaimewebdev.com/sass/_about.scss
@@ -66,16 +66,25 @@
         font-size: 5rem;
         font-weight: 700;
 
+        @media only screen and (max-width: $bp-larger){
+            font-size: 4.8rem;
+        
+          }
+
+        @media only screen and (max-width: $bp-large){
+            font-size: 3.5rem;
+        
+          }
         @media only screen and (max-width: $bp-small) {
-            font-size: 4.5rem;
+            // font-size: 4.5rem;
         }
 
         @media only screen and (max-width: $bp-smaller) {
-            font-size: 4rem;
+            // font-size: 4rem;
         }
 
         @media only screen and (max-width: $bp-smaller2) {
-            font-size: 3.5rem;
+            // font-size: 3.5rem;
         }
     }
 
