--- a/jaimewebdev.com/sass/_navigation.scss
+++ b/jaimewebdev.com/sass/_navigation.scss
@@ -2,28 +2,28 @@
 .menu-btn {
     position: fixed;
     background: $color-secondary;
-    height: 55px;
-    width: 55px;
+    height: 3.4rem;
+    width: 3.4rem;
     border-radius: 50%;
     right: 15px;
-    top: 35px;
+    top: 2.1rem;
     cursor: pointer;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
     z-index: 2;
 
 
     @media only screen and (max-width: $bp-small) {
-        right: 25px;
+        right: .8rem;
     }
 
     .btn-line {
         position: relative;
-        top: 35%;
+        top: 34%;
         left: 50%;
         transform: translate(-50%, -50%);
-        width: 29px;
-        height: 2px;
-        margin: 0 0 7px 0;
+        width: 1.8rem;
+        height: 1px;
+        margin: 0 0 6px 0;
         background: $color-white;
         @include easeOut3s;
     }
@@ -36,7 +36,7 @@
 
             //line 1 - Rotate
             &:nth-child(1) {
-                transform: rotate(45deg) translate(-5px, 18px);
+                transform: rotate(45deg) translate(-5px, 14px);
             }
 
             //Line 2 - Hide 
@@ -46,7 +46,7 @@
 
             //Line 3 Rotate
             &:nth-child(3) {
-                transform: rotate(-45deg) translate(-5px, -17px);
+                transform: rotate(-45deg) translate(-4px, -15px);
             }
         }
     }
