--- a/jaimewebdev.com/sass/_variables.scss
+++ b/jaimewebdev.com/sass/_variables.scss
@@ -36,8 +36,8 @@ $dark-orange:darken($orange, 20%);
 $grey:#B6B6B6;
 $light-grey:lighten($grey, 15%);
 
-$background:#efefef;
-$field-color:#E8E9EA;
+// $background:#efefef;
+// $field-color:#E8E9EA;
 
 // ===== BACKGROUNDS =====
 
