--- a/jaimewebdev.com/sass/_components.scss
+++ b/jaimewebdev.com/sass/_components.scss
@@ -8,6 +8,10 @@
     border: solid 2px $color-secondary;
     font-family: $font-primary;
 
+    @media only screen and (max-width: $bp-smaller2) {
+        margin-top: 2rem;
+    }
+
     &__link {
         color: $color-primary;
     }
@@ -119,7 +123,6 @@
         @media only screen and (max-width: $bp-smaller2) {
             width: 100%;
             height: 95vh;  
-
         }
     }
 
