--- a/jaimewebdev.com/sass/_header.scss
+++ b/jaimewebdev.com/sass/_header.scss
@@ -3,11 +3,16 @@
   height: 100vh;
   z-index: 4;
 
+  @media only screen and (max-width: $bp-small) {
+    background-position: left 90% bottom 10%;
+  }
+
   @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
   only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
   only screen and (min-width: 125em) {
     @include bgHome-mobile;
       background-attachment: fixed;
+
       
   }
 }
