cleaned up code

--- a/jaimewebdev.com/css/style.css
+++ b/jaimewebdev.com/css/style.css
@@ -49,10 +49,11 @@
 
 html {
   box-sizing: inherit;
-  font-size: 80%; }
+  font-size: 80%;
+  overflow-x: hidden; }
 
 body {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   line-height: 1.6rem; }
 
 a {
@@ -77,9 +78,6 @@ a {
   align-items: center;
   height: auto;
   background: linear-gradient(to right, #f2f4f6 0%, #f2f4f6 62%, #e3e7ec 20%, #e3e7ec 100%); }
-  @media only screen and (max-width: 62.5em) {
-    .section__about {
-      background: none; } }
   @media only screen and (max-width: 50em) {
     .section__about {
       background: #e3e7ec;
@@ -189,7 +187,7 @@ a {
         width: 100%; } }
 
 .section__services {
-  padding: 0 0 7rem 0; }
+  padding: 0 3.5rem 7rem 3.5rem; }
   @media only screen and (max-width: 50em) {
     .section__services {
       padding-bottom: 4.3rem; } }
@@ -223,7 +221,7 @@ a {
     margin-bottom: 2.5rem;
     text-align: center; }
   .services__content-text {
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     font-weight: 400;
     line-height: 1.5;
     font-family: "Raleway", sans-serif;
@@ -232,21 +230,43 @@ a {
     text-align: center; }
 
 .btn {
-  display: inline-block;
+  color: #444;
+  cursor: pointer;
+  display: block;
+  font-weight: 400;
+  line-height: 2.8;
+  letter-spacing: 1px;
+  margin: 0 0 2rem;
+  max-width: 160px;
   position: relative;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  font-weight: 700;
+  text-decoration: none;
   text-transform: uppercase;
-  padding: .6rem .8rem;
-  border: solid 2px #00ADDA;
-  font-family: "Raleway", sans-serif; }
-  @media only screen and (max-width: 23.43em) {
-    .btn {
-      margin-top: 2rem; } }
-  .btn__link {
-    color: #444; }
+  width: 100%; }
+
+.btn_projects {
+  background: transparent;
+  font-weight: 700; }
+  .btn_projects svg {
+    height: 35px;
+    left: 11px;
+    position: absolute;
+    top: 0;
+    width: 85%; }
+  .btn_projects rect {
+    fill: none;
+    stroke: #00ADDA;
+    stroke-width: 3;
+    stroke-dasharray: 422, 0;
+    transition: all 0.35s linear; }
+
+.btn_projects:hover {
+  font-weight: 800;
+  letter-spacing: 1px; }
+  .btn_projects:hover rect {
+    stroke-width: 5;
+    stroke-dasharray: 15, 268;
+    stroke-dashoffset: 55;
+    transition: all 1.35s cubic-bezier(0.19, 1, 0.22, 1); }
 
 .btn_header {
   color: #fff;
@@ -632,7 +652,7 @@ button.scroll_down:before {
   padding-bottom: 4rem; }
   @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), only screen and (min-width: 125em) {
     .projects__section {
-      background-image: linear-gradient(rgba(227, 231, 236, 0.6), rgba(227, 231, 236, 0.6)), url(../img/bg-projects-small.jpg);
+      background-image: linear-gradient(rgba(227, 231, 236, 0.8), rgba(227, 231, 236, 0.8)), url(../img/bg-projects-small.jpg);
       background-size: cover;
       background-repeat: no-repeat;
       position: relative;
@@ -798,6 +818,14 @@ button.scroll_down:before {
     background-color: #fff;
     color: #444;
     transition-delay: 0s !important; }
+
+.container {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 1rem;
+  text-align: center; }
 
 .section__skills {
   background: #f2f4f6;
@@ -1098,8 +1126,8 @@ button.scroll_down:before {
     background-color: #00ADDA; }
 
 .footer {
-  background-color: rgba(33, 42, 56, 0.93);
-  padding: 3rem 0 1rem 0;
+  background-color: #1e1e1e;
+  padding: 3rem 0 0 0;
   color: #fff; }
 
 .nav {
@@ -1107,7 +1135,8 @@ button.scroll_down:before {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  list-style: none; }
+  list-style: none;
+  margin-bottom: 3rem; }
   .nav__item {
     padding: 1rem;
     color: #b7b7b7; }
@@ -1120,9 +1149,11 @@ button.scroll_down:before {
     color: #fff; }
 
 .copyright {
-  color: #b7b7b7;
+  background-color: #090909;
+  color: #00ADDA;
   font-size: 1.2rem;
   margin-top: 3rem;
-  margin-right: auto;
-  margin-left: auto;
-  text-align: center; }
+  margin: 0 auto;
+  padding: .7rem;
+  text-align: center;
+  width: 100%; }
