--- a/jaimewebdev.com/sass/_services.scss
+++ b/jaimewebdev.com/sass/_services.scss
@@ -1,5 +1,5 @@
 .section__services {
-    padding: 0 0 7rem 0;
+    padding: 0 3.5rem 7rem 3.5rem;
  
     @media only screen and (max-width: $bp-medium) {
         padding-bottom: 4.3rem;
@@ -46,7 +46,7 @@
     }
 
     &-text {
-        font-size: 1.3rem;
+        font-size: 1.4rem;
         font-weight: 400;
         line-height: 1.5;
         font-family: $font-primary;
