updated responsive design

--- a/jaimewebdev.com/sass/_typography.scss
+++ b/jaimewebdev.com/sass/_typography.scss
@@ -64,27 +64,31 @@
 .heading-secondary {
   position: relative;
   color: $color-primary;
-  font-family: $font-primary;
   font-size: 2.2rem;
   font-weight: 600;
   text-align: center;
-  line-height: 1.2em;
   text-transform: uppercase;
-  padding: 6rem 0 8rem 0;
+  // padding: 6rem 0 8rem 0;
+  margin-bottom: 8rem;
+  width: 100%;
+
+  display: flex;
+justify-content: center;  
 
   @media only screen and (max-width: $bp-small) {
-    padding: 3rem 0 6rem 0;
+    // padding: 3rem 0 6rem 0;
 
  }
 
   @media only screen and (max-width: $bp-smaller2) {
-    padding-top: 3rem;
+    // padding-top: 3rem;
 }
 
   &:after {
     content: "";
     position: absolute;
-    bottom: 40%;
+    // bottom: 40%;
+    top: 167%;
     right: 48%;
     width: 4%;
     height: 2px;
