--- a/jaimewebdev.com/css/style.css
+++ b/jaimewebdev.com/css/style.css
@@ -78,7 +78,8 @@ a {
   display: flex;
   align-items: center;
   height: auto;
-  background: linear-gradient(to right, #f2f4f6 0%, #f2f4f6 62%, #e3e7ec 20%, #e3e7ec 100%); }
+  background: linear-gradient(to right, #f2f4f6 0%, #f2f4f6 62%, #e3e7ec 20%, #e3e7ec 100%);
+  padding-top: 6rem; }
   @media only screen and (max-width: 50em) {
     .section__about {
       background: #e3e7ec;
@@ -188,15 +189,23 @@ a {
         width: 100%; } }
 
 .section__services {
-  padding: 0 3.5rem 7rem 3.5rem; }
-  @media only screen and (max-width: 50em) {
+  padding: 6rem 4rem 8rem 4rem; }
+  @media only screen and (max-width: 43.57em) {
     .section__services {
-      padding-bottom: 4.3rem; } }
+      padding: 6rem 2rem 1rem 2rem; } }
+  @media only screen and (max-width: 37.5em) {
+    .section__services {
+      padding: 0 1.5rem 3rem 1.5rem; } }
+  @media only screen and (max-width: 25em) {
+    .section__services {
+      padding: 0 1.3rem 3rem 1.3rem; } }
+  @media only screen and (max-width: 23.43em) {
+    .section__services {
+      padding: 6rem 1rem 3rem 1rem; } }
 
 .services__container {
   display: flex;
-  padding: 2;
-  width: 100%; }
+  padding: 2; }
   @media only screen and (max-width: 50em) {
     .services__container {
       display: block; } }
@@ -205,19 +214,13 @@ a {
   display: flex;
   flex-flow: column;
   margin: 0 auto;
-  width: 100%;
-  padding: 1rem; }
+  width: 100%; }
   @media only screen and (max-width: 50em) {
     .services__content {
-      display: block;
-      text-align: center;
-      width: 95%; } }
-  @media only screen and (max-width: 37.5em) {
+      margin-bottom: 2.3rem; } }
+  @media only screen and (max-width: 25em) {
     .services__content {
-      width: 95%; } }
-  @media only screen and (max-width: 37.5em) {
-    .services__content {
-      width: 90%; } }
+      width: 100%; } }
   .services__content-icon {
     margin-bottom: 2.5rem;
     text-align: center; }
@@ -229,6 +232,9 @@ a {
     color: #444;
     margin-top: 2rem;
     text-align: center; }
+    @media only screen and (max-width: 50em) {
+      .services__content-text {
+        margin-top: 1rem; } }
 
 .btn {
   color: #444;
@@ -462,7 +468,7 @@ a {
     transition: all .3s ease-out; }
 
 .header {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url(../img/bg-home.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../img/bg-home.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
@@ -650,7 +656,7 @@ button.scroll_down:before {
 
 .projects__section {
   background-color: #e3e7ec;
-  padding-bottom: 4rem; }
+  padding: 6rem 0 4rem 0; }
   @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), only screen and (min-width: 125em) {
     .projects__section {
       background-image: linear-gradient(rgba(227, 231, 236, 0.8), rgba(227, 231, 236, 0.8)), url(../img/bg-projects-small.jpg);
@@ -830,7 +836,7 @@ button.scroll_down:before {
 
 .section__skills {
   background: #f2f4f6;
-  padding: 0 2rem 10rem 2rem; }
+  padding: 6rem 2rem 8rem 2rem; }
   @media only screen and (max-width: 37.5em) {
     .section__skills {
       padding: 2rem 1rem 8rem 1rem; } }
@@ -929,23 +935,18 @@ button.scroll_down:before {
 .heading-secondary {
   position: relative;
   color: #444;
-  font-family: "Raleway", sans-serif;
   font-size: 2.2rem;
   font-weight: 600;
   text-align: center;
-  line-height: 1.2em;
   text-transform: uppercase;
-  padding: 6rem 0 8rem 0; }
-  @media only screen and (max-width: 37.5em) {
-    .heading-secondary {
-      padding: 3rem 0 6rem 0; } }
-  @media only screen and (max-width: 23.43em) {
-    .heading-secondary {
-      padding-top: 3rem; } }
+  margin-bottom: 8rem;
+  width: 100%;
+  display: flex;
+  justify-content: center; }
   .heading-secondary:after {
     content: "";
     position: absolute;
-    bottom: 40%;
+    top: 167%;
     right: 48%;
     width: 4%;
     height: 2px;
