--- a/jaimewebdev.com/sass/_about.scss
+++ b/jaimewebdev.com/sass/_about.scss
@@ -4,6 +4,7 @@
     align-items: center;
     height: auto;
     @include lenearGradient;
+    padding-top: 6rem;
     // background-image: linear-gradient(-75deg, $color-terceary-dark 45%, $color-terceary-dark 40%, $color-terceary 30%, $color-terceary 30%);
     
   
