--- a/jaimewebdev.com/sass/_projects.scss
+++ b/jaimewebdev.com/sass/_projects.scss
@@ -1,6 +1,7 @@
 .projects__section {
     background-color: $color-terceary-dark;
-    padding-bottom: 4rem;
+    padding: 6rem 0 4rem 0;
+
 
     @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
     only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
