--- a/jaimewebdev.com/sass/_services.scss
+++ b/jaimewebdev.com/sass/_services.scss
@@ -1,15 +1,32 @@
 .section__services {
-    padding: 0 3.5rem 7rem 3.5rem;
+    padding: 6rem 4rem 8rem 4rem;
+
  
-    @media only screen and (max-width: $bp-medium) {
-        padding-bottom: 4.3rem;
+    @media only screen and (max-width: $bp-medium2) {
+       padding: 6rem 2rem 1rem 2rem;
+
     }    
+    
+    @media only screen and (max-width: $bp-small) {
+        padding: 0 1.5rem 3rem 1.5rem;
+    
+     }
+
+    @media only screen and (max-width: $bp-smaller) {
+       padding: 0 1.3rem 3rem 1.3rem;
+    }
+
+    @media only screen and (max-width: $bp-smaller2) {
+        padding: 6rem 1rem 3rem 1rem;
+        
+     }
+
+
 }
 
 .services__container {
     display: flex;      
     padding: 2;
-    width: 100%;
 
 
     @media only screen and (max-width: $bp-medium) {
@@ -22,21 +39,28 @@
     flex-flow: column;
     margin: 0 auto;
     width: 100%;
-    padding: 1rem;
 
     @media only screen and (max-width: $bp-medium) {
-        display: block;
-        text-align: center;
-        // padding: 1.8rem;
-        width: 95%;
+        margin-bottom: 2.3rem;   
     }
 
-    @media only screen and (max-width: $bp-small) {
-        width: 95%;
-    }
+    // @media only screen and (max-width: $bp-medium2) {
+    //     // display: block;
+    //     // text-align: center;
+    //     // // padding: 1.8rem;
+    //     // width: 90%;
+    //     // padding: 0;
 
-    @media only screen and (max-width: $bp-small) {
-        width: 90%;
+       
+    // }
+
+    // // @media only screen and (max-width: $bp-small) {
+    // //     width: 100%;
+    // //     margin: 0 auto;
+    // // }
+
+    @media only screen and (max-width: $bp-smaller) {
+        width: 100%;
     }
 
 
@@ -53,6 +77,10 @@
         color: $color-primary;
         margin-top: 2rem;
         text-align: center;
+
+        @media only screen and (max-width: $bp-medium) {
+            margin-top: 1rem;   
+        }
     }
 }
 
