--- a/jaimewebdev.com/sass/_skills.scss
+++ b/jaimewebdev.com/sass/_skills.scss
@@ -1,6 +1,6 @@
 .section__skills {
     background: $color-terceary;
-    padding: 0 2rem 10rem 2rem;
+    padding: 6rem 2rem 8rem 2rem;
 
     @media only screen and (max-width: $bp-small) {
         padding: 2rem 1rem 8rem 1rem;
