--- a/jaimewebdev.com/sass/_services.scss
+++ b/jaimewebdev.com/sass/_services.scss
@@ -8,12 +8,12 @@
     }    
     
     @media only screen and (max-width: $bp-small) {
-        padding: 0 1.5rem 3rem 1.5rem;
+        padding: 6rem 1.5rem 3rem 1.5rem;
     
      }
 
     @media only screen and (max-width: $bp-smaller) {
-       padding: 0 1.3rem 3rem 1.3rem;
+       padding: 6rem 1.3rem 3rem 1.3rem;
     }
 
     @media only screen and (max-width: $bp-smaller2) {
