added spanish traslation

--- a/jaimewebdev.com/sass/_base.scss
+++ b/jaimewebdev.com/sass/_base.scss
@@ -53,3 +53,14 @@ a {
     }
 
 }
+
+.m-top-small {
+    margin-top: .8rem;
+}
+.pa-left-right {
+    padding: 0 1rem 0 1rem;
+}
+
+.disable {
+    pointer-events: none;
+}
