--- a/jaimewebdev.com/css/style.css
+++ b/jaimewebdev.com/css/style.css
@@ -73,6 +73,15 @@ a {
     .row {
       padding-bottom: 1rem; } }
 
+.m-top-small {
+  margin-top: .8rem; }
+
+.pa-left-right {
+  padding: 0 1rem 0 1rem; }
+
+.disable {
+  pointer-events: none; }
+
 .section__about {
   position: relative;
   display: flex;
@@ -188,7 +197,7 @@ a {
         width: 100%; } }
 
 .section__services {
-  padding: 6rem 4rem 8rem 4rem; }
+  padding: 6rem 3.5rem 8rem 3.5rem; }
   @media only screen and (max-width: 43.57em) {
     .section__services {
       padding: 6rem 2rem 1rem 2rem; } }
@@ -203,8 +212,7 @@ a {
       padding: 6rem 1rem 3rem 1rem; } }
 
 .services__container {
-  display: flex;
-  padding: 2; }
+  display: flex; }
   @media only screen and (max-width: 50em) {
     .services__container {
       display: block; } }
@@ -229,50 +237,36 @@ a {
     line-height: 1.5;
     font-family: "Raleway", sans-serif;
     color: #444;
-    margin-top: 2rem;
-    text-align: center; }
+    padding-top: 2rem;
+    text-align: center;
+    margin: 0 auto;
+    width: 85%; }
     @media only screen and (max-width: 50em) {
       .services__content-text {
         margin-top: 1rem; } }
 
 .btn {
+  border: 1.5px solid #00ADDA;
   color: #444;
   cursor: pointer;
   display: block;
   font-weight: 400;
   line-height: 2.8;
-  letter-spacing: 1px;
   margin: 0 0 2rem;
   max-width: 160px;
   position: relative;
+  padding: .1rem .5rem .1rem .5rem;
   text-decoration: none;
   text-transform: uppercase;
-  width: 100%; }
+  width: 100%;
+  transition: all .2s; }
 
 .btn_projects {
   background: transparent;
   font-weight: 700; }
-  .btn_projects svg {
-    height: 35px;
-    left: 11px;
-    position: absolute;
-    top: 0;
-    width: 85%; }
-  .btn_projects rect {
-    fill: none;
-    stroke: #00ADDA;
-    stroke-width: 3;
-    stroke-dasharray: 422, 0;
-    transition: all 0.35s linear; }
-
-.btn_projects:hover {
-  font-weight: 800;
-  letter-spacing: 1px; }
-  .btn_projects:hover rect {
-    stroke-width: 5;
-    stroke-dasharray: 15, 268;
-    stroke-dashoffset: 55;
-    transition: all 1.35s cubic-bezier(0.19, 1, 0.22, 1); }
+  .btn_projects:hover {
+    font-weight: 900;
+    letter-spacing: 1px; }
 
 .btn_header {
   color: #fff;
@@ -314,15 +308,18 @@ a {
     right: -2px; }
 
 .popup {
+  position: relative;
   height: 100vh;
   width: 100%;
   position: fixed;
   top: 0;
   left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
   opacity: 0;
   visibility: hidden;
   transition: all .3s ease-out;
-  z-index: 99; }
+  z-index: 99;
+  backdrop-filter: blur(10px); }
   @supports (-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px)) {
     .popup {
       -webkit-backdrop-filter: blur(10px);
@@ -331,9 +328,10 @@ a {
   .popup__content {
     display: flex;
     justify-content: flex-end;
+    margin-top: 27rem;
     position: relative;
     left: 50%;
-    top: 50%;
+    top: 40%;
     transform: translate(-50%, -50%);
     max-width: 90rem;
     width: 90%;
@@ -484,7 +482,7 @@ a {
 .main-heading {
   position: relative;
   left: 50%;
-  top: 50%;
+  top: 40%;
   transform: translate(-50%, -50%);
   text-align: center;
   z-index: -1; }
@@ -541,6 +539,44 @@ button.scroll_down:before {
   100% {
     opacity: 0; } }
 
+.language {
+  display: none; }
+
+.language.active {
+  display: block; }
+
+.language-choice img {
+  transform: scale(0.9);
+  filter: blur(0.1px) brightness(80%); }
+
+.language-choice.current img {
+  transform: scale(0.9);
+  filter: blur(0) brightness(100%); }
+
+.language-controls {
+  padding: 1rem 0 0 1.5rem; }
+  .language-controls a {
+    color: #00ADDA;
+    font-weight: 600;
+    font-size: 1rem; }
+  .language-controls--flag {
+    display: inline-block;
+    margin-right: .5rem;
+    width: 3%;
+    height: auto;
+    transform: translateX(-4rem) scale(1.4); }
+    @media only screen and (max-width: 50em) {
+      .language-controls--flag {
+        width: 5%; } }
+    @media only screen and (max-width: 43.57em) {
+      .language-controls--flag {
+        width: 6%; } }
+    @media only screen and (max-width: 37.5em) {
+      .language-controls--flag {
+        width: 8%; } }
+    .language-controls--flag:hover {
+      filter: blur(0.1px) brightness(100%); }
+
 .menu-btn {
   position: fixed;
   background: #00ADDA;
@@ -548,7 +584,7 @@ button.scroll_down:before {
   width: 4.2rem;
   border-radius: 50%;
   right: 15px;
-  top: 3rem;
+  top: 1.5rem;
   cursor: pointer;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   z-index: 2; }
@@ -606,12 +642,12 @@ button.scroll_down:before {
     transition: all 0.4s ease-out; }
     .menu .nav-item.show {
       transform: translate3d(0, 0, 0); }
-    .menu .nav-item.active > a {
+    .menu .nav-item.active-link > a {
       color: #00ADDA; }
   .menu .nav-link {
     display: inline-block;
     position: relative;
-    font-size: 1.8rem;
+    font-size: 2rem;
     color: #444;
     text-transform: uppercase;
     padding: 1rem 0;
@@ -625,7 +661,7 @@ button.scroll_down:before {
       top: 0;
       left: 50%;
       transform: translate(-50%, -50%);
-      font-size: 2.2em;
+      font-size: 1.8em;
       opacity: 0;
       pointer-events: none;
       z-index: -1;
@@ -652,6 +688,24 @@ button.scroll_down:before {
 
 .nav-item:nth-child(6) {
   transition-delay: 0.6s; }
+
+.nav-item:nth-child(7) {
+  transition-delay: 0.7s; }
+
+.nav-item:nth-child(8) {
+  transition-delay: 0.8s; }
+
+.nav-item:nth-child(9) {
+  transition-delay: 0.9s; }
+
+.nav-item:nth-child(10) {
+  transition-delay: 1s; }
+
+.nav-item:nth-child(11) {
+  transition-delay: 1.1s; }
+
+.nav-item:nth-child(12) {
+  transition-delay: 1.2s; }
 
 .projects__section {
   background-color: #e3e7ec;
@@ -1146,6 +1200,9 @@ button.scroll_down:before {
     color: #b7b7b7;
     padding: .5rem 1rem .5rem 1rem;
     transition: all .2s; }
+    .nav__link i {
+      font-size: 2rem;
+      margin-right: .5rem; }
   .nav__link:hover, .nav__link:active {
     color: #fff; }
 
