--- a/jaimewebdev.com/sass/_navigation.scss
+++ b/jaimewebdev.com/sass/_navigation.scss
@@ -6,7 +6,7 @@
     width: 4.2rem;
     border-radius: 50%;
     right: 15px;
-    top: 3rem;
+    top: 1.5rem;
     cursor: pointer;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
     z-index: 2;
@@ -102,7 +102,7 @@
             transform: translate3d(0, 0, 0);
         }
 
-        &.active>a {
+        &.active-link>a {
             color: $color-secondary;
         }
     }
@@ -110,7 +110,7 @@
     .nav-link {
         display: inline-block;
         position: relative;
-        font-size: 1.8rem;
+        font-size: 2rem;
         color: $color-primary;
         text-transform: uppercase;
         padding: 1rem 0;
@@ -128,7 +128,7 @@
             top: 0;
             left: 50%;
             transform: translate(-50%, -50%);
-            font-size: 2.2em;
+            font-size: 1.8em;
             opacity: 0;
             pointer-events: none;
             z-index: -1;
@@ -145,8 +145,8 @@
 }
 
 //Delay each nav item slide by 0.1s
-@for $i from 1 through 6 {
+@for $i from 1 through 12 {
     .nav-item:nth-child(#{$i}) {
-        transition-delay: $i * 0.1s;
+        transition-delay: $i * .1s;
     }
 }
