--- a/jaimewebdev.com/sass/_services.scss
+++ b/jaimewebdev.com/sass/_services.scss
@@ -1,5 +1,5 @@
 .section__services {
-    padding: 6rem 4rem 8rem 4rem;
+    padding: 6rem 3.5rem 8rem 3.5rem;
 
  
     @media only screen and (max-width: $bp-medium2) {
@@ -25,8 +25,8 @@
 }
 
 .services__container {
-    display: flex;      
-    padding: 2;
+    display: flex; 
+    // padding: 2rem;
 
 
     @media only screen and (max-width: $bp-medium) {
@@ -37,6 +37,7 @@
 .services__content {
     display: flex;
     flex-flow: column;
+    // padding: 0rem 1rem 0 1rem;
     margin: 0 auto;
     width: 100%;
 
@@ -75,8 +76,10 @@
         line-height: 1.5;
         font-family: $font-primary;
         color: $color-primary;
-        margin-top: 2rem;
+        padding-top: 2rem;
         text-align: center;
+        margin: 0 auto;
+        width: 85%;
 
         @media only screen and (max-width: $bp-medium) {
             margin-top: 1rem;   
