--- a/jaimewebdev.com/sass/_header.scss
+++ b/jaimewebdev.com/sass/_header.scss
@@ -152,7 +152,7 @@ button.scroll_down:before {
 
 
     &:hover {
-      filter: blur(.1px) brightness(100%);
+      filter: brightness(100%);
     }
 
   }
