--- a/jaimewebdev.com/sass/_header.scss
+++ b/jaimewebdev.com/sass/_header.scss
@@ -110,14 +110,14 @@ button.scroll_down:before {
 
 .language-choice img {
   transform: scale(.9);
-  filter: blur(.1px) brightness(80%);
+  filter: brightness(90%);
 
 
 }
 
 .language-choice.current img {
   transform: scale(.9);
-  filter: blur(0) brightness(100%);
+  filter: brightness(100%);
 
 }
 
@@ -135,7 +135,8 @@ button.scroll_down:before {
     margin-right: .5rem;
     width: 3%;
     height: auto;
-    transform: translateX(-4rem) scale(1.4);
+    filter: brightness(100%);
+    
 
     @media only screen and (max-width: $bp-medium) {
       width: 5%;
@@ -152,7 +153,7 @@ button.scroll_down:before {
 
 
     &:hover {
-      filter: brightness(100%);
+      opacity: .8;
     }
 
   }
