--- a/jaimewebdev.com/css/style.css
+++ b/jaimewebdev.com/css/style.css
@@ -246,12 +246,14 @@ a {
         margin-top: 1rem; } }
 
 .btn {
+  display: inline-block;
   border: 1.5px solid #00ADDA;
   color: #444;
   cursor: pointer;
   display: block;
   font-weight: 400;
   line-height: 2.8;
+  letter-spacing: 1px;
   margin: 0 0 2rem;
   max-width: 160px;
   position: relative;
