--- a/jaimewebdev.com/sass/_components.scss
+++ b/jaimewebdev.com/sass/_components.scss
@@ -1,14 +1,14 @@
 
 // ****** DEFAULT BUTTON ******
 .btn {
-    // display: inline-block;
+    display: inline-block;
     border: 1.5px solid $color-secondary;
     color: $color-primary;
     cursor: pointer;
     display: block;
     font-weight: 400;
     line-height: 2.8;
-    // letter-spacing: 1px;
+    letter-spacing: 1px;
     margin: 0 0 2rem;
     max-width: 160px; 
     position: relative;
