--- a/jaimewebdev.com/css/style.css
+++ b/jaimewebdev.com/css/style.css
@@ -339,7 +339,7 @@ a {
     width: 90%;
     height: 90vh;
     background-color: #f2f4f6;
-    box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.9);
+    box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.5);
     border-radius: 3px;
     overflow: hidden;
     opacity: 0;
@@ -351,72 +351,77 @@ a {
     @media only screen and (max-width: 43.57em) {
       .popup__content {
         height: 95vh; } }
-    @media only screen and (max-width: 23.43em) {
+    @media only screen and (max-width: 37.5em) {
+      .popup__content {
+        height: 98vh;
+        width: 100%; } }
+    @media only screen and (max-width: 25em) {
       .popup__content {
         width: 100%;
-        height: 95vh; } }
+        height: 100vh; } }
   .popup__right {
     width: 34%;
     height: auto;
-    margin-top: 6rem;
-    padding: 0 3rem 0 6rem; }
+    margin-top: 5rem;
+    padding: 0 6rem 0 6rem; }
     @media only screen and (max-width: 222.5em) {
       .popup__right {
         margin-top: 7rem; } }
     @media only screen and (max-width: 62.5em) {
       .popup__right {
         width: 100%;
-        margin-top: 36rem;
+        margin-top: 32rem;
         padding-left: 2.3rem; } }
     @media only screen and (max-width: 50em) {
       .popup__right {
-        margin-top: 33rem; } }
+        margin-top: 30rem; } }
     @media only screen and (max-width: 43.57em) {
       .popup__right {
         width: 100%;
-        margin-top: 35rem; } }
+        margin-top: 30rem; } }
     @media only screen and (max-width: 37.5em) {
       .popup__right {
-        margin-top: 28rem; } }
+        margin-top: 26rem; } }
     @media only screen and (max-width: 25em) {
       .popup__right {
         margin-top: 27rem; } }
     @media only screen and (max-width: 23.43em) {
       .popup__right {
-        margin-top: 29rem; } }
+        margin-top: 22rem; } }
   .popup__img {
     position: absolute;
     top: 10%;
     left: 4%;
-    width: 55%;
+    width: 50%;
     display: block;
     z-index: -1; }
     @media only screen and (max-width: 62.5em) {
       .popup__img {
-        top: 8%;
+        top: 5%;
         width: 50%; } }
     @media only screen and (max-width: 50em) {
       .popup__img {
-        top: 10%;
+        top: 5%;
         width: 58%; } }
     @media only screen and (max-width: 43.57em) {
       .popup__img {
         width: 65%;
+        top: 5%;
         left: 5%; } }
     @media only screen and (max-width: 37.5em) {
       .popup__img {
-        width: 80%;
+        width: 70%;
         top: 10%;
         left: 6%; } }
     @media only screen and (max-width: 25em) {
       .popup__img {
-        width: 80%;
+        width: 75%;
         top: 9%;
         left: 10%; } }
     @media only screen and (max-width: 23.43em) {
       .popup__img {
-        width: 85%;
-        top: 11%;
+        width: 70%;
+        top: 6%;
         left: 8%; } }
   .popup__text {
     font-family: "Raleway", sans-serif;
