--- a/jaimewebdev.com/sass/_components.scss
+++ b/jaimewebdev.com/sass/_components.scss
@@ -123,7 +123,7 @@
         width: 90%;
         height: 90vh;
         background-color: $color-terceary;
-        box-shadow: 0 2rem 4rem rgba($bg-overlay-darker, .9);
+        box-shadow: 0 2rem 4rem rgba($bg-overlay-darker, .5);
         border-radius: 3px;
         overflow: hidden;
         opacity: 0;
@@ -138,18 +138,26 @@
             height: 95vh;  
         }
 
-        @media only screen and (max-width: $bp-smaller2) {
+        @media only screen and (max-width: $bp-small) {
+            height: 98vh;  
             width: 100%;
-            height: 95vh;  
         }
+        @media only screen and (max-width: $bp-smaller) {
+            width: 100%;
+            height: 100vh;  
+        }
+
+        // @media only screen and (max-width: $bp-smaller2) {
+        //     width: 100%;
+        //     height: 100vh;  
+        // }
     }
 
     &__right {
         width: 34%;
-        height: auto;
-        
-        margin-top: 6rem;
-        padding: 0 3rem 0 6rem;
+        height: auto; 
+        margin-top: 5rem;
+        padding: 0 6rem 0 6rem;
 
         @media only screen and (max-width: $bp-largest) {
             margin-top: 7rem;   
@@ -157,23 +165,22 @@
 
         @media only screen and (max-width: $bp-large) {
             width: 100%;
-            margin-top: 36rem;
+            margin-top: 32rem;
             padding-left: 2.3rem;
         }
 
         @media only screen and (max-width: $bp-medium) {
-            margin-top: 33rem;
+            margin-top: 30rem;
  
         }
 
         @media only screen and (max-width: $bp-medium2) {
             width: 100%;
-            margin-top: 35rem;
-            // padding: 30rem 2rem 2rem 2rem;    
+            margin-top: 30rem;
         }
 
          @media only screen and (max-width: $bp-small) {
-           margin-top: 28rem;   
+           margin-top: 26rem;   
          }
 
          @media only screen and (max-width: $bp-smaller) {
@@ -181,7 +188,7 @@
          }
 
          @media only screen and (max-width: $bp-smaller2) {
-            margin-top: 29rem ;   
+            margin-top: 22rem ;   
          }
 
     }
@@ -190,41 +197,42 @@
         position: absolute;
         top: 10%;
         left: 4%;
-        width: 55%;
+        width: 50%;
         display: block;
         z-index: -1;
 
         @media only screen and (max-width: $bp-large) {
-           top: 8%;
+           top: 5%;
            width: 50%;
         }
 
         @media only screen and (max-width: $bp-medium) {
-            top: 10%;
+            top: 5%;
             width: 58%;
 
          }
 
          @media only screen and (max-width: $bp-medium2) {
             width: 65%; 
+            top: 5%;
             left: 5%;
         }
 
         @media only screen and (max-width: $bp-small) {
-           width: 80%;
+           width: 70%;
            top: 10%;
            left: 6%;   
         }
 
         @media only screen and (max-width: $bp-smaller) {
-            width: 80%;
+            width: 75%;
             top: 9%;  
             left: 10%;  
          }
 
          @media only screen and (max-width: $bp-smaller2) {
-            width: 85%;
-            top: 11%;  
+            width: 70%;
+            top: 6%;  
             left: 8%;  
          }
     }
