--- a/jaimewebdev.com/sass/_base.scss
+++ b/jaimewebdev.com/sass/_base.scss
@@ -48,6 +48,10 @@ a {
     overflow: hidden;
     padding-bottom: 4.5rem;
 
+    @media only screen and (max-width: $bp-small) {
+        padding-bottom: 1.5rem;
+    }
+
     @media only screen and (max-width: $bp-smaller) {
         padding-bottom: 1rem;
     }
