--- a/jaimewebdev.com/sass/_components.scss
+++ b/jaimewebdev.com/sass/_components.scss
@@ -144,15 +144,15 @@
             height: 100vh;  
         }
 
-        // @media only screen and (max-width: $bp-smaller2) {
-        //     width: 100%;
-        //     height: 100vh;  
-        // }
+        @media only screen and (max-width: $bp-smaller2) {
+            // width: 100%;
+            // height: 100vh;  
+        }
     }
 
     &__right {
         width: 34%;
-        height: auto; 
+        height: 100%; 
         margin-top: 5rem;
         padding: 0 6rem 0 6rem;
 
@@ -172,20 +172,22 @@
         }
 
         @media only screen and (max-width: $bp-medium2) {
-            width: 100%;
-            margin-top: 30rem;
+            padding: 0 1.9rem 0 1.9rem;
+            margin-top: 28rem;
         }
 
          @media only screen and (max-width: $bp-small) {
-           margin-top: 26rem;   
+            padding: 0 1.5rem 0 1.5rem;
+            margin-top: 26rem;   
          }
 
          @media only screen and (max-width: $bp-smaller) {
-            margin-top: 27rem;   
+            margin-top: 25rem; 
          }
 
          @media only screen and (max-width: $bp-smaller2) {
-            margin-top: 22rem ;   
+            margin-top: 26rem ;  
+ 
          }
 
     }
@@ -200,12 +202,12 @@
 
         @media only screen and (max-width: $bp-large) {
            top: 5%;
-           width: 50%;
+           width: 56%;
         }
 
         @media only screen and (max-width: $bp-medium) {
-            top: 5%;
-            width: 58%;
+            top: 3%;
+            width: 63%;
 
          }
 
@@ -216,21 +218,20 @@
         }
 
         @media only screen and (max-width: $bp-small) {
-           width: 70%;
-           top: 10%;
-           left: 6%;   
+           width: 74%;
+           top: 7%;
+           left: 5%;   
         }
 
         @media only screen and (max-width: $bp-smaller) {
-            width: 75%;
-            top: 9%;  
-            left: 10%;  
+            top: 8%;  
+            left: 5%;  
          }
 
          @media only screen and (max-width: $bp-smaller2) {
-            width: 70%;
-            top: 6%;  
-            left: 8%;  
+            width: 80%;
+            top: 8%;  
+            left: 6%;  
          }
     }
 
@@ -242,8 +243,15 @@
         letter-spacing: .5px;
         color: $color-primary;
 
+
+        @media only screen and (max-width: $bp-smaller) {
+            width: 100%;
+              
+          }
+
         @media only screen and (max-width: $bp-smaller2) {
            font-size: 1.3rem;
+           margin-bottom: 1rem;
              
          }
 
@@ -277,9 +285,11 @@
             z-index: 110;
 
             @media only screen and (max-width: $bp-small) {
-              top: 2rem;
+              top: 1.5rem;
+              right: 1.5rem;
         
              }
+
         }
 
         &:hover {
@@ -303,12 +313,24 @@
     margin-right: 1rem;
 
     @media only screen and (max-width: $bp-larger) {
-        margin-right: 0;  
+        margin-right: 1rem;  
     }
 
+
+    @media only screen and (max-width: $bp-small) {
+        margin: 1rem .8rem 0 0;
+    }
+
+
+    @media only screen and (max-width: $bp-smaller) {
+        display: inline-block;
+        width: 30%;
+
+     }
+
     @media only screen and (max-width: $bp-smaller2) {
-        display: flex;
-        margin-bottom: 1rem;
+        margin: 1rem .2rem 0 0;
+        width: 35%;
 
      }
 
